Create repository; wipe it clean

--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@
 baseurl: ""
 relativeURLs: true
 
-title: "Quire Starter Kit"
+title: "Keep It Moving"
 languageCode: "en-us"
 theme: "quire-web-theme"
 footnoteReturnLinkContents: "↩"
