Add essays to repository

--- a/data/publication.yml
+++ b/data/publication.yml
@@ -11,5 +11,5 @@ title:
   main: Keep It Moving?
   subtitle: Conserving Kinetic Art
   edition: # First, revised, etc.
-  short: Quire Starter Kit
+  short: Kinetic Art
 pub_date: 2017-01-01
