Add credit category to figures.yml

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -261,7 +261,7 @@ biblio_list:
     reference_for: "9, selected"
 
   - short: Suárez 2007
-    full: "Suárez, Osbel. 2007. “The Logic of Ecstasy.” In *Lo\[s\] cinético\[s\]*, edited by Osbel Suárez and Eugenio Fontaneda, 243–47. Madrid: Artes Gráficas Palermo."
+    full: "Suárez, Osbel. 2007. “The Logic of Ecstasy.” In *Lo[s] cinético[s]*, edited by Osbel Suárez and Eugenio Fontaneda, 243–47. Madrid: Artes Gráficas Palermo."
     reference_for: "9, selected"
 
   - short: United States Department of Commerce 1959
