fixes to figure.yml 13.5

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -860,7 +860,7 @@ figure_list:
   - id: "13.5"
     src: fig-13-5-plante.jpg
     caption: >
-      *Multiples* by Hugo Demarco, featured in the Galerie Denise René exhibition *Demarco: Dynamique de l’image* (April–May 1968) and the accompanying catalogue. The Parisian gallery supported the production of multiples and reserved a section for them in its exhibition catalogues.
+      <em>Multiples</em> by Hugo Demarco, featured in the Galerie Denise René exhibition <em>Demarco: Dynamique de l’image</em> (April–May 1968) and the accompanying catalogue. The Parisian gallery supported the production of multiples and reserved a section for them in its exhibition catalogues.
     credit: >
       From *Demarco: Dynamique de l’image, Galerie Denise René, Paris . . . avril–mai 1968*. Paris: Galerie Denise René; Société Mondial d’Impression, 1968. Reproduced with permission. \[Demarco copyright notice TK\]\ \[© TK\]
 
