--- a/config.yml
+++ b/config.yml
@@ -24,6 +24,8 @@ metaDataFormat: "yaml"
 # These values can be accessed in templates via .Site.Params
 params:
   searchEnabled: true
+  imageLabelContentBefore: "Figure "
+  imageLabelContentAfter: ". "
 
 # Menu: the 'main' menu will be picked up in the sidebar navigation menu in the
 # default theme. Other menus can be defined here as well for use with custom
