Add q-cite and q-bibliography support
Currently run as an override against the theme. Will need to be folded
in to final theme work.

--- a/config.yml
+++ b/config.yml
@@ -26,6 +26,7 @@ params:
   searchEnabled: true
   imageLabelContentBefore: "Figure "
   imageLabelContentAfter: ". "
+  displayBiblioShort: "true"
 
 # Menu: the 'main' menu will be picked up in the sidebar navigation menu in the
 # default theme. Other menus can be defined here as well for use with custom
