Update figure shortcodes for youtube and vimeo

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -49,7 +49,8 @@ figure_list:
       Courtesy Museum Tinguely, Basel. Photo: Christian Baur.
 
   - id: "1.5"
-    src: fig-1-5-video-bek.mov
+    src: Mrvriy6TaEU
+    media_type: youtube
     caption: >
       Woman creating a drawing on a 1990 replica of Jean Tinguely’s *Méta-Matic No. 10*, 1959. Museum Tinguely, Basel. © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris.
     credit: >
@@ -70,7 +71,8 @@ figure_list:
       © 2017 Artists Rights Society (ARS), New York / VG Bild-Kunst, Bonn.
 
   - id: "1.8"
-    src: fig-1-8-video-bek.mov
+    src: lP8QLUGaupA
+    media_type: youtube
     caption: >
       Otto Piene’s *Neon Medusa*, 1969, in operation. Collection Neuberger Museum of Art, Purchase College, State University of New York, gift of Leonore F. Rosenthal.
     credit: >
@@ -84,7 +86,8 @@ figure_list:
       Courtesy of the artist.
 
   - id: "1.10"
-    src: fig-1-10-video-bek.mov
+    src: UkpyR7iLm5Q
+    media_type: youtube
     caption: >
       Liz Larner’s *Corner Basher*, 1988, in operation. Gaby and Wilhelm Schürmann.
     credit: Courtesy of the artist.
@@ -97,7 +100,8 @@ figure_list:
       Courtesy of Donald R. Mullen, Jr., with permission from the artist.
 
   - id: "1.12"
-    src: fig-1-12-video-bek.mov
+    src: Kpwfx8Zn0S4
+    media_type: youtube
     caption: >
       Leo Villareal’s *Flowers 8*, 2005.
     credit: >
