update bibliography years

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -29,7 +29,7 @@ entries:
     reference_for: "2, 12, selected"
 
   - short: Caianiello 2013
-    full: "TCaianiello, Tiziana. 2013. ““Materializing the Ephemeral: The Preservation and Presentation of Media Art Installations.” In *Media Art Installations: Presentation and Preservation; Materializing the Ephemeral*, edited by Renate Buschmann and Tiziana Caianiello, 207–29. Berlin: Dietrich Reimer Verlag."
+    full: "Caianiello, Tiziana. 2013. ““Materializing the Ephemeral: The Preservation and Presentation of Media Art Installations.” In *Media Art Installations: Presentation and Preservation; Materializing the Ephemeral*, edited by Renate Buschmann and Tiziana Caianiello, 207–29. Berlin: Dietrich Reimer Verlag."
     reference_for: "2, selected"
 
   - short: Eco 1962
@@ -41,15 +41,15 @@ entries:
     reference_for: "2, selected"
 
   - short: Eco 1990
-    full: "*Interpretation and Overinterpretation: World, History, Texts*. Paper presented at the Tanner Lectures on Human Values. Clare Hall, Cambridge University, March 7–8. Accessed August 29, 2016. [tannerlectures.utah.edu/\_documents/a-to-z/e/Eco\_91.pdf](http://tannerlectures.utah.edu/_documents/a-to-z/e/Eco_91.pdf)."
+    full: "Eco, Umberto. 1990. *Interpretation and Overinterpretation: World, History, Texts*. Paper presented at the Tanner Lectures on Human Values. Clare Hall, Cambridge University, March 7–8. Accessed August 29, 2016. [tannerlectures.utah.edu/\_documents/a-to-z/e/Eco\_91.pdf](http://tannerlectures.utah.edu/_documents/a-to-z/e/Eco_91.pdf)."
     reference_for: "2, selected"
 
   - short: Eco 1992
-    full: "“Reply.” In *Interpretation and Overinterpretation*, edited by Stefan Collini, 139–51. Cambridge: Cambridge University Press."
+    full: "Eco, Umberto. 1992. “Reply.” In *Interpretation and Overinterpretation*, edited by Stefan Collini, 139–51. Cambridge: Cambridge University Press."
     reference_for: "2, selected"
 
   - short: Eco 2012
-    full: "“Il realismo minimo.” *La Repubblica*, March 11. Accessed August 29, 2016. [ricerca.repubblica.it/repubblica/archivio/repubblica/2012/03/11/il-realismo-minimo.html](http://ricerca.repubblica.it/repubblica/archivio/repubblica/2012/03/11/il-realismo-minimo.html)."
+    full: "Eco, Umberto. 2012. “Il realismo minimo.” *La Repubblica*, March 11. Accessed August 29, 2016. [ricerca.repubblica.it/repubblica/archivio/repubblica/2012/03/11/il-realismo-minimo.html](http://ricerca.repubblica.it/repubblica/archivio/repubblica/2012/03/11/il-realismo-minimo.html)."
     reference_for: "2, selected"
 
   - short: Laurenson 2005
@@ -65,7 +65,7 @@ entries:
     reference_for: "2, selected"
 
   - short: Zell 2015
-    full: "Zell, Thekla. 2015. Zell, Thekla. 2015. “The Ship ZERO Is Casting Out Its Anchor, and the Voyage Is Over: ZERO in Bonn and a Final Midnight Ball.” In *The Artist as Curator: Collaborative Initiatives in the International ZERO Movement, 1957–1967*, edited by Tiziana Caianiello and Mattijs Visser, 397–427. Ghent: MER. Paper Kunsthalle."
+    full: "Zell, Thekla. 2015. “The Ship ZERO Is Casting Out Its Anchor, and the Voyage Is Over: ZERO in Bonn and a Final Midnight Ball.” In *The Artist as Curator: Collaborative Initiatives in the International ZERO Movement, 1957–1967*, edited by Tiziana Caianiello and Mattijs Visser, 397–427. Ghent: MER. Paper Kunsthalle."
     reference_for: "2, selected"
 
   - short: Schader 2012
@@ -152,7 +152,7 @@ entries:
     full: "Laurenson, Pip. 2006. “Authenticity, Change and Loss in the Conservation of Time-Based Media Installations.” *Tate Papers* 6 (Autumn). [www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations](http://www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations)."
     reference_for: "6, selected"
 
-  - short: Smithsonian Institution 2006
+  - short: Smithsonian Institution 2010
     full: "Smithsonian Institution. 2010. *Collaborations in Conserving Time-Based Art: A Summary of Discussion Group Sessions of a Colloquium Co-organized by the Lunder Conservation Center of the Smithsonian American Art Museum and National Portrait Gallery and the Hirshhorn Museum and Sculpture Garden*. Washington, D.C.: Office of Policy and Analysis, Smithsonian Institution. [www.si.edu/content/tbma/documents/Time-Based-Art\_Report.pdf](https://www.si.edu/content/tbma/documents/Time-Based-Art_Report.pdf)."
     reference_for: "6, selected"
 
@@ -184,11 +184,11 @@ entries:
     full: "Spencer, Charles. 1966. “Profile of Takis.” *Arts Review* (November 24): 555, 560."
     reference_for: "7, selected"
 
-  - short: Takis and Calas 1966
+  - short: Takis, Calas, and Calas 1984
     full: "Takis, Elena Calas, and Nicolas Calas. 1984. *Takis: Monographies*. Paris: Editions Galilée."
     reference_for: "7, selected"
 
-  - short: Takis and Hoctin 1966
+  - short: Takis, Jouffroy, and Hoctin 1964
     full: "Takis, Alain Jouffroy, and Luce Hoctin. 1964. *Takis: Dix ans de sculpture*, *1954–1964.* New York: A. Iolas."
     reference_for: "7, selected"
 
@@ -508,7 +508,7 @@ entries:
     full: "Van de Vall, Renee. 2005. “Painful Decisions: Philosophical Considerations on a Decision-Making Model.” In Hummelen and Sillé 2005:196–200."
     reference_for: "14, selected"
 
-  - short: van Saaze 2007
+  - short: van Saaze 2009
     full: "van Saaze, Vivian. 2009. “From Intention to Interaction: Reframing the Artist’s Interview in Conservation Research.” In *Art d’aujourd’hui, patrimoine de demain, Conservation-restauration des oeuvres contemporaines*, 20–28. Paris: SFIIC, Paris."
     reference_for: "14, selected"
 
@@ -584,6 +584,6 @@ entries:
     full: "Kunstmuseum Basel. 1983. *Jonathan Borofsky*: *Zeichnungen 1960*–*1983*. Basel, Switzerland: Kunstmuseum Basel."
     reference_for: "17, selected"
 
-  - short: Melillo, Richmond, and Yohe 1983
+  - short: Melillo, Richmond, and Yohe 2014
     full: "Melillo, Jerry M., Terese (T. C.) Richmond, and Gary W. Yohe, eds. 2014. *Climate Change Impacts in the United States: The Third National Climate Assessment*. Washington, D.C.: U.S. Global Change Research Program. [doi:10.7930/J0Z31WJ2](http://s3.amazonaws.com/nca2014/low/NCA3_Full_Report_0a_Front_Matter_LowRes.pdf?download=1)."
     reference_for: "19, selected"
