--- a/config.yml
+++ b/config.yml
@@ -27,6 +27,8 @@ params:
   imageLabelContentBefore: "Figure "
   imageLabelContentAfter: ". "
   displayBiblioShort: "true"
+  tocType: "full"
+  menuType:  "short"
 
 # Menu: the 'main' menu will be picked up in the sidebar navigation menu in the
 # default theme. Other menus can be defined here as well for use with custom
