--- a/data/publication.yml
+++ b/data/publication.yml
@@ -1,14 +1,161 @@
-# Book.yml Data File
+# Publication.yml Data File
 #
-# This file houses the bibliographic info and general metadata for the digital
-# publication. New fields can be added arbitrarily, but the Quire themes will
-# expect this file to follow the general structure shown here. Templates can
-# access values stored in this file in the following way:
-#
-# {{ .Site.Data.book.title.main }} => "Catalogue Template"
-#
+# This file houses the bibliographic info and general metadata for your digital
+# publication.
+
 title: Keep It Moving?
 subtitle: Conserving Kinetic Art
-edition: # First, revised, etc.
-short_title: Kinetic Art
-pub_date: 2017-01-01
+short_title:
+reading_line:
+
+url: http://www.getty.edu/publications/keepitmoving
+
+pub_type: book
+pub_date: 2018-02-01
+language: en
+isbn: 978-1-60606-536-5
+issn:
+publisher:
+  - name: Getty Conservation Institute
+    location: Los Angeles
+    url: http://www.getty.edu/conservation
+
+series_periodical_name: The Getty Conservation Institute, Proceedings
+series_issue_number:
+
+primary_contributor:
+  - id: 1
+    first_name: Rachel
+    last_name: Rivenc
+    title:
+    affiliation:
+    role: Editor
+    role_code: edc
+    url:
+    bio:
+  - id: 2
+    first_name: Reinhard
+    last_name: Bek
+    title:
+    affiliation:
+    role: Editor
+    role_code: edc
+    url:
+    bio:
+
+secondary_contributor:
+
+contributor_as_it_appears: Rachel Rivenc and Reinhard Bek, Editors
+
+marketing_graphic:
+
+description:
+  one_line:
+  full:
+  additional_online:
+  additional_pdf_ebook:
+
+subject_metadata:
+  keywords:
+  linked_vocabulary:
+    - type:
+      name:
+      url:
+  bisac:
+    - code:
+      subject:
+
+library_of_congress_cip_data:
+
+copyright: © 2018 J. Paul Getty Trust
+
+license:
+  name: Creative Commons Attribution 4.0 International License
+  link_relation: license
+  url: http://creativecommons.org/licenses/by/4.0/
+  icon: cc-by.png
+  exceptions:
+    online:
+    pdf_ebook:
+    all:
+
+project-team:
+  - first_name:
+    last_name:
+    role:
+
+# FORMATS, DOWNLOADS & LINKS
+
+# `media_type`: http://www.iana.org/assignments/media-types/media-types.xhtml
+# `link_relation`: http://www.iana.org/assignments/link-relations/link-relations.xhtml
+# `description`: will append as new paragraph(s) to main `description` above on the backcover and/or About page for this edition
+# `identifier`: should be an ISBN, ISSN, DOI or other similar designator
+
+formats:
+  - name: EPUB
+    media_type: application/epub+zip
+    link_relation: alternate
+    url: http://www.getty.edu/publications/keepitmoving/downloads/KeepItMoving.epub
+    identifier: 978-1-60606-538-9
+    file_size_mb:
+    icon:
+  - name: MOBI/KINDLE
+    media_type: application/mobi
+    link_relation: alternate
+    url: http://www.getty.edu/publications/keepitmoving/downloads/KeepItMoving.mobi
+    identifier: 978-1-60606-538-9
+    file_size_mb:
+    icon:
+  - name: PDF
+    media_type: application/pdf
+    link_relation: alternate
+    url: http://www.getty.edu/publications/keepitmoving/downloads/KeepItMoving.pdf
+    identifier: 978-1-60606-537-2
+    file_size_mb:
+    icon:
+  - name: Paperback
+    media_type: print
+    link_relation: alternate
+    url: http://shop.getty.edu/products/keep-it-moving-978-1606065372
+    identifier: 978-1-60606-537-2
+    file_size_mb:
+    icon:
+
+# related_resources:
+#   - name:
+#     media_type:
+#     link_relation:
+#     url:
+#     identifier:
+#     file_size_mb:
+#     icon:
+
+footer_links:
+  - name: About
+    media_type:
+    link_relation: about
+    url: http://www.getty.edu/publications/keepitmoving/about/
+    identifier:
+    file_size_mb:
+    icon:
+  - name: Privacy Policy
+    media_type:
+    link_relation: privacy-policy
+    url: http://www.getty.edu/legal/privacy.html
+    identifier:
+    file_size_mb:
+    icon:
+  - name: Terms of Use
+    media_type:
+    link_relation: terms-of-service
+    url: http://www.getty.edu/legal/copyright.html
+    identifier:
+    file_size_mb:
+    icon:
+
+# REVISIONS & VERSION CONTROL
+
+revision_history:
+  - date: 2018-02-01
+    summary:
+repository_url: http://www.github.com/gettypubs/keepitmoving
