Allow custom page location maker in q-cite

--- a/config.yml
+++ b/config.yml
@@ -29,6 +29,7 @@ params:
   displayBiblioShort: "true"
   tocType: "full"
   menuType:  "short"
+  citationPageLocationDivider: ":"
 
 # Menu: the 'main' menu will be picked up in the sidebar navigation menu in the
 # default theme. Other menus can be defined here as well for use with custom
