Update to add figure credits w/ style override

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -23,9 +23,9 @@ figure_list:
   - id: "1.1"
     src: fig-1-1-bek.jpg
     caption: >
-      *Kinetic Construction* (*Standing Wave*), 1919–20, by Naum Gabo (1890–1977); replica 1985. The Work of Naum Gabo
+      *Kinetic Construction* (*Standing Wave*), 1919–20, by Naum Gabo (1890–1977); replica 1985.
     credit: >
-      © Nina & Graham Williams. Photo: © Tate, London 2016.
+      The Work of Naum Gabo © Nina & Graham Williams. Photo: © Tate, London 2016.
 
   - id: "1.2"
     src: fig-1-2-bek.jpg
@@ -37,24 +37,24 @@ figure_list:
   - id: "1.3"
     src: fig-1-3-bek.jpg
     caption: >
-      Jean Tinguely’s *Méta-Matic No. 10*, 1959. Museum Tinguely, Basel. © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris.
+      Jean Tinguely’s *Méta-Matic No. 10*, 1959. Museum Tinguely, Basel.
     credit: >
-      Courtesy Museum Tinguely, Basel. Photo: Serge Hasenboehler.
+      © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris. Courtesy Museum Tinguely, Basel. Photo: Serge Hasenboehler.
 
   - id: "1.4"
     src: fig-1-4-bek.jpg
     caption: >
-      Jean Tinguely’s *Méta-Matic No. 10*, 1959; replica 1990. Museum Tinguely, Basel. © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris.
+      Jean Tinguely’s *Méta-Matic No. 10*, 1959; replica 1990. Museum Tinguely, Basel.
     credit: >
-      Courtesy Museum Tinguely, Basel. Photo: Christian Baur.
+      © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris. Courtesy Museum Tinguely, Basel. Photo: Christian Baur.
 
   - id: "1.5"
     src: Mrvriy6TaEU
     media_type: youtube
     caption: >
-      Woman creating a drawing on a 1990 replica of Jean Tinguely’s *Méta-Matic No. 10*, 1959. Museum Tinguely, Basel. © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris.
+      Woman creating a drawing on a 1990 replica of Jean Tinguely’s *Méta-Matic No. 10*, 1959. Museum Tinguely, Basel.
     credit: >
-      Courtesy Museum Tinguely, Basel. Video: Walter Kummli.
+      © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris. Courtesy Museum Tinguely, Basel. Video: Walter Kummli.
 
   - id: "1.6"
     src: fig-1-6-bek.jpg
